<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="20dip">





    <EditText
        android:id="@+id/activity_add_meeting_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"

        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add_meeting_date_text"

        android:text="text1"
        android:textSize="26sp"
        android:textStyle="bold"



        />

    <TextView
        android:id="@+id/add_meeting_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_meeting_item_name"


        android:text = "Date : "

        />

    <TextView
        android:id="@+id/activity_add_meeting_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/add_meeting_date_text"
        app:layout_constraintTop_toBottomOf="@id/activity_add_meeting_item_name"




        />

    <TextView
        android:id="@+id/add_meeting_begin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_date_text"


        android:text = "Début : "

        />

    <TextView
        android:id="@+id/activity_add_meeting_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/add_meeting_begin_text"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_date_text"
        android:hint="date begin"




        />

    <TextView
        android:id="@+id/add_meeting_end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_begin_text"


        android:text = "Fin : "

        />

    <TextView
        android:id="@+id/activity_add_meeting_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/add_meeting_end_text"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_begin_text"
        android:hint="date de fin"




        />

    <EditText
        android:id="@+id/activity_add_meeting_participants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"

        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/add_participants_text"

        app:layout_constraintTop_toBottomOf="@+id/add_meeting_end_text"
        android:text="text2"

        />





    <TextView
        android:id="@+id/add_meeting_room_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/add_participants_text"


        android:text = "Room : "

        />
    <TextView
        android:id="@+id/activity_add_meeting_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/add_participants_text"
        app:layout_constraintStart_toEndOf="@+id/add_meeting_date_text"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"

        />

    <EditText
        android:id="@+id/add_participants_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_end_text"


        android:text = "Participants : "

        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider">

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/participants"
        android:minWidth="32dp"
        app:layout_constraintEnd_toStartOf="@+id/addParticipant_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/activity_add_meeting_room"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <AutoCompleteTextView
            android:id="@+id/participant_autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/normal"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="369dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addParticipant_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/design_default_color_primary"
        android:paddingStart="8dp"
        android:paddingTop="0dp"
        android:paddingEnd="8dp"
        android:paddingBottom="0dp"
        android:text="@string/add_participant"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/add_participants_text"
        />

    <Button
        android:id="@+id/activity_add_meeting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Enregistrer"
        />


</androidx.constraintlayout.widget.ConstraintLayout>