<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraint_layout"
    android:padding="20dip">

    <ImageView
        android:id="@+id/activity_main_image"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/activity_main_item_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="marketing"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/activity_main_image"
        app:layout_constraintTop_toTopOf="parent"

        />

        <TextView
            android:id="@+id/activity_main_participants"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="smail.omari@laposte.net"
            app:layout_constraintEnd_toStartOf="@id/activity_main_delete_button"
            app:layout_constraintStart_toEndOf="@id/activity_main_image"
            app:layout_constraintBottom_toBottomOf="parent"
            />



    <TextView
        android:id="@+id/activity_main_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="20/04 10h00"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/activity_main_item_name"


        />

    <TextView
        android:id="@+id/activity_main_room"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/activity_main_delete_button"
        app:layout_constraintStart_toEndOf="@+id/activity_main_date"
        />

    <ImageButton
        android:id="@+id/activity_main_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_delete_grey_900_24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>