<resources>
    <string name="app_name">My reu</string>

    <string name="room01">Eclair</string>
    <string name="room02">Andromède</string>
    <string name="room03">Paintsilvia</string>
    <string name="room04">Pegasus</string>
    <string name="room05">Vulton</string>
    <string name="room06">Quantum</string>
    <string name="room07">Sirius</string>
    <string name="room08">Centuron</string>
    <string name="room09">Poseidon</string>
    <string name="room10">Artemis</string>

    <string name="social_media_name_test">Urgent</string>
    <string name="add_participant">Ajouter</string>
    <string name="participants">Veuillez renseigner les emails des participant</string>
    <string name="its_not_an_email_message">ce n\'est pas un email</string>
    <string name="text1_name_test">text1</string>
</resources>